--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
   </head>
   <body>
+    <!-- Header -->
     <header>
       <nav>
         <div class="icon">
@@ -52,8 +53,11 @@
       </nav>
     </header>
     <div class="non-fixed-header"></div>
+
+    <!-- Article list -->
     <main>
       <section>
+        <!-- One article start -->
         <div class="article">
           <div class="article-left">
             <div class="author">
@@ -86,6 +90,8 @@
             </div>
           </div>
         </div>
+        <!-- One article end -->
+
         <div class="article">
             <div class="article-left">
               <div class="author">
@@ -344,10 +350,14 @@
           </div>
       </section>
     </main>
+
+    <!-- Footer -->
     <footer>
       <div class="paginator">[Paginator]</div>
     </footer>
     <div class="non-fixed-footer"></div>
+
+    <!-- Script -->
     <script
       src="https://kit.fontawesome.com/6fb9682f78.js"
       crossorigin="anonymous"
