--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articlecamp</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="icon"
       type="image/svg+xml"
@@ -106,6 +106,6 @@
       src="https://kit.fontawesome.com/6fb9682f78.js"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
