完成task1~4基本架構, Task2~4移除search bar跟footer

--- a/article.html
+++ b/article.html
@@ -29,14 +29,6 @@
           </text>
         </svg>
       </div>
-      <div class="search-container">
-        <div class="search-bar">
-          <input class="search-input" type="text" placeholder="Search...">
-        </div>
-        <div class="search-btn">
-          <button>Search</button>
-        </div>
-      </div>
       <div class="menu">
         <i class="fa-solid fa-bars fa-2xl menu-icon"></i>
       </div>
@@ -52,55 +44,27 @@
         <h3 class="article-author">文章作者: newlean14</h3>
         <div class="article-context">
           文章內容:
-          <article>In bridge, bidding is
-            considered the most important aspect of the game. It's a given that a good bidder equals a winning bridge
-            player. Here are a few bidding tips to start you off:
-            <ul>
-              <li>
-                <p>Before opening, add your high card points (HCP): Ace = 4, King = 3, Queen = 2,
-                  Jack = 1. With 12 or more HCP, open the bidding.</p>
-              </li>
-              <li>
-                <p>To open 1♥ or 1♠, you need at least five cards in the suit.</p>
-              </li>
-              <li>
-                <p>With two five-card suits, open in the higher-ranking suit first. The rank of the
-                  suits, from highest to lowest, is spades, hearts, diamonds, clubs.</p>
-              </li>
-              <li>
-                <p>With two four-card suits, one a major (hearts or spades), one a minor (diamonds or
-                  clubs), open in the minor. With two four-card minors, open 1♦.</p>
-              </li>
-              <li>
-                <p>Open 1NT with 15 to 17 HCP plus a balanced hand (no voids, singletons, or two
-                  doubletons).</p>
-              </li>
-              <li>
-                <p>If your partner opens, pass with fewer than 6 HCP. With 6 or more HCP, bid your
-                  longest suit at the one level, if possible. Responding at the two level in a new suit requires 11 or
-                  more HCP. A response of 1NT shows 6 to 10 HCP and denies a four-card major if your partner opens 1♣ or
-                  1♦.</p>
-              </li>
-              <li>
-                <p>Supporting your partner's first bid major suit requires three or more cards in the
-                  suit; supporting <i>any</i> second bid suit requires four or more cards in the suit.</p>
-              </li>
-              <li>
-                <p>A primary objective in bidding is to locate an eight-card or longer major suit fit
-                  between your hand and your partner's.</p>
-              </li>
-            </ul>
-          </article>
+          <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui saepe ad, tempore quae reprehenderit ab
+            repellat commodi maxime, ullam tempora dolorem quod tenetur? Nobis repudiandae ab nemo blanditiis, illo
+            quos?
+            Quia asperiores natus obcaecati officiis assumenda maiores quibusdam unde rerum quam repudiandae doloribus
+            libero, adipisci magni perspiciatis, saepe ipsam vel. Architecto perspiciatis dolores molestias a aliquid
+            laboriosam explicabo obcaecati harum.
+            Nam temporibus illum porro, expedita repudiandae, in suscipit velit, amet sequi veritatis eos? Asperiores
+            voluptates voluptatibus possimus nulla ullam praesentium quae mollitia sapiente nihil placeat, quaerat
+            recusandae accusantium et consectetur.
+            Fuga eaque, neque nesciunt nostrum nemo maiores maxime! Consequatur, earum tempore doloribus veniam officia
+            ab accusantium, possimus itaque quibusdam quo tenetur quod facere nostrum. Vel saepe soluta libero nesciunt
+            consequuntur.
+            Adipisci nesciunt reiciendis aperiam consequuntur, alias vitae impedit ipsum molestias placeat in hic
+            sapiente ex aut dicta laborum facilis fugiat officia excepturi veritatis ut enim aliquid repellendus
+            voluptates? Quis, commodi.</article>
         </div>
       </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <div class="paginator">[Paginator]</div>
-  </footer>
-  <div class="non-fixed-footer"></div>
 
   <!-- Script -->
   <!-- axios -->
