--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main>
       <!-- Article list -->
       <section id="article-container">
-        <!-- <div class="article">
+        <div class="article">
           <div class="article-left">
             <div class="author">
               <div class="author-img">
@@ -88,7 +88,7 @@
                 <i class="fa-solid fa-heart favorite"> 7</i>
             </div>
           </div>
-        </div> -->
+        </div>
       </section>
     </main>
 
