--- a/create.html
+++ b/create.html
@@ -1,1 +1,67 @@
 <!-- 新增文章頁面 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Articlecamp</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='40' fill='%23c32f27'/%3E%3Ctext x='50' y='60' font-family='Arial' font-size='50' fill='%23f9c80e' text-anchor='middle' dominant-baseline='middle'%3EA%3C/text%3E%3C/svg%3E" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Header -->
+  <header>
+    <nav>
+      <div class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+          <!-- 圓圈 -->
+          <circle cx="50" cy="50" r="40" fill="#c32f27" />
+          <!-- 文字 "A" -->
+          <text x="50" y="57" font-family="Arial" font-size="50" fill="#f9c80e" text-anchor="middle"
+            dominant-baseline="middle">
+            A
+          </text>
+        </svg>
+      </div>
+      <div class="menu">
+        <i class="fa-solid fa-bars fa-2xl menu-icon"></i>
+      </div>
+    </nav>
+  </header>
+  <div class="non-fixed-header"></div>
+
+  <main>
+    <!-- Article list -->
+    <section id="article-container">
+      <div class="article-content">
+        <h1 class="article-title">文章標題: <input type="text" value=""></h1>
+        <h3 class="article-author">文章作者: <input type="text" value=""></h3>
+        <div class="article-context">
+          文章內容:
+          <article><input type="text" value=""></article>
+        </div>
+        <button class="cancel-btn">Cancel</button>
+        <button class="submit-btn">Submit</button>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+
+  <!-- Script -->
+  <!-- axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
+  <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
+</body>
+
+</html>
