refactor: 移除多餘的標籤

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -39,22 +39,20 @@
   <div class="non-fixed-header"></div>
 
   <main>
-    <!-- Article list -->
-    <section id="article-container">
-      <div class="article-content">
-        <h1 class="article-title">文章標題: <input type="text" value="Bridge Bidding Strategy"></h1>
-        <h3 class="article-author">文章作者: <input type="text" value="newlean14"></h3>
-        <div class="article-context">
-          文章內容:
-          <article><input type="text" value="Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui saepe ad, tempore quae reprehenderit ab repellat commodi maxime, ullam tempora dolorem quod tenetur? Nobis repudiandae ab nemo blanditiis, illo quos? Quia asperiores natus obcaecati officiis assumenda maiores quibusdam unde rerum quam repudiandae doloribus libero, adipisci magni perspiciatis, saepe ipsam vel. Architecto perspiciatis dolores molestias a aliquid laboriosam explicabo obcaecati harum. Nam temporibus illum porro, expedita repudiandae, in suscipit velit, amet sequi veritatis eos? Asperiores voluptates voluptatibus possimus nulla ullam praesentium quae mollitia sapiente nihil placeat, quaerat recusandae accusantium et consectetur. Fuga eaque, neque nesciunt nostrum nemo maiores maxime! Consequatur, earum tempore doloribus veniam officia ab accusantium, possimus itaque quibusdam quo tenetur quod facere nostrum. Vel saepe soluta libero nesciunt consequuntur. Adipisci nesciunt reiciendis aperiam consequuntur, alias vitae impedit ipsum molestias placeat in hic sapiente ex aut dicta laborum facilis fugiat officia excepturi veritatis ut enim aliquid repellendus voluptates? Quis, commodi."></article>
-        </div>
-        <button class="cancel-btn">Cancel</button>
-        <button class="submit-btn">Submit</button>
+    <div class="article-content">
+      <h1 class="article-title">文章標題: <input type="text" value="Bridge Bidding Strategy"></h1>
+      <h3 class="article-author">文章作者: <input type="text" value="newlean14"></h3>
+      <div class="article-context">
+        文章內容:
+        <article>
+          <input type="text"
+            value="Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui saepe ad, tempore quae reprehenderit ab repellat commodi maxime, ullam tempora dolorem quod tenetur? Nobis repudiandae ab nemo blanditiis, illo quos? Quia asperiores natus obcaecati officiis assumenda maiores quibusdam unde rerum quam repudiandae doloribus libero, adipisci magni perspiciatis, saepe ipsam vel. Architecto perspiciatis dolores molestias a aliquid laboriosam explicabo obcaecati harum. Nam temporibus illum porro, expedita repudiandae, in suscipit velit, amet sequi veritatis eos? Asperiores voluptates voluptatibus possimus nulla ullam praesentium quae mollitia sapiente nihil placeat, quaerat recusandae accusantium et consectetur. Fuga eaque, neque nesciunt nostrum nemo maiores maxime! Consequatur, earum tempore doloribus veniam officia ab accusantium, possimus itaque quibusdam quo tenetur quod facere nostrum. Vel saepe soluta libero nesciunt consequuntur. Adipisci nesciunt reiciendis aperiam consequuntur, alias vitae impedit ipsum molestias placeat in hic sapiente ex aut dicta laborum facilis fugiat officia excepturi veritatis ut enim aliquid repellendus voluptates? Quis, commodi.">
+        </article>
       </div>
-    </section>
+      <button class="cancel-btn">Cancel</button>
+      <button class="submit-btn">Submit</button>
+    </div>
   </main>
-
-  <!-- Footer -->
 
   <!-- Script -->
   <!-- axios -->
