--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <button>Search</button>
           </div>
         </div>
-        <div class="menu">
-          <i class="fa-solid fa-bars fa-2xl menu-icon"></i>
+        <div class="create-article">
+          <button id="createButton" type="submit">Create</button>
         </div>
       </nav>
     </header>
