feat: 直接使用 button id 來綁定監聽器

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,8 +47,9 @@
             <button>Search</button>
           </div>
         </div>
-        <div class="create-article">
-          <button id="createButton" type="submit">Create</button>
+        <div>
+          <!-- type="submit" 的 <button> 用於提交表單，而未指定 type 的 <button> 通常用於其他目的，例如JavaScript事件處理程序。 -->
+          <button id="createButton">Create</button>
         </div>
       </nav>
     </header>
