button submit 改成 button click 監聽器

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,12 +30,10 @@
         </svg>
       </div>
       <div class="search-container">
-        <form id="search-form" action="/restaurants" class="search-bar">
+        <div id="search-form" class="search-bar">
           <input id="search-input" class="search-input" type="text" placeholder="Search..." name="search" value="">
-          <div class="search-btn">
-            <button type="submit">Search</button>
-          </div>
-        </form>
+            <button class="search-btn">Search</button>
+        </div>
       </div>
       <div>
         <!-- type="submit" 的 <button> 用於提交表單，而未指定 type 的 <button> 通常用於其他目的，例如JavaScript事件處理程序。 -->
