--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,12 +31,12 @@
       </div>
       <div class="search-container">
         <div id="search-form" class="search-bar">
-          <input id="search-input" class="search-input" type="text" placeholder="Search..." name="search" value="">
-            <button class="search-btn">Search</button>
+          <input id="search-input" type="text" placeholder="Search..." name="search" value="">
+          <button id="search-btn">Search</button>
         </div>
       </div>
       <div>
-        <!-- type="submit" 的 <button> 用於提交表單，而未指定 type 的 <button> 通常用於其他目的，例如JavaScript事件處理程序。 -->
+        <!-- type="submit" 的 <button> 用於提交表單，而未指定 type 的 <button> 通常用於其他目的，例如 JavaScript 事件處理程序。 -->
         <button id="createButton">Create</button>
       </div>
     </nav>
