feat: 將 cookie 和 query 參數整合到 utils.js

--- a/src/html/article.html
+++ b/src/html/article.html
@@ -64,6 +64,7 @@
       src="https://kit.fontawesome.com/6fb9682f78.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/article.js"></script>
   </body>
 </html>
