--- a/src/html/create.html
+++ b/src/html/create.html
@@ -56,7 +56,9 @@
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+  
+  <script src="../js/utils.js"></script>
+  <script src="../js/index.js"></script>
 </body>
 
 </html>
