logo添加cursor並在index, article, edit, create都添加回到index的監聽器

--- a/src/html/create.html
+++ b/src/html/create.html
@@ -55,7 +55,7 @@
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
   
   <script src="../js/utils.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="../js/create.js"></script>
 </body>
 
 </html>
