Task 11 新增文章按鈕及取消新增返回首頁

--- a/src/html/create.html
+++ b/src/html/create.html
@@ -37,11 +37,11 @@
 
   <main>
     <div class="article-content">
-      <h1 class="article-title">文章標題: <input type="text" value=""></h1>
-      <h3 class="article-author">文章作者: <input type="text" value=""></h3>
+      <h1 class="article-title">文章標題: <input type="text" value="" id="article-title"></h1>
+      <h3 class="article-author">文章作者: <input type="text" value="" id="article-author"></h3>
       <div class="article-context">
         文章內容:
-        <article><input type="text" value=""></article>
+        <article><input type="text" value="" id="article-context"></article>
       </div>
       <button class="cancel-btn">Cancel</button>
       <button class="submit-btn">Submit</button>
@@ -55,7 +55,7 @@
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
   
   <script src="../js/utils.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="../js/create.js"></script>
 </body>
 
 </html>
