--- a/src/html/create.html
+++ b/src/html/create.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/reset.css" />
+    <!-- <link rel="stylesheet" href="../css/reset.css" /> -->
     <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="icon"
@@ -41,8 +41,8 @@
 
   <main>
     <div class="article-content">
-      <h1 class="article-title">文章標題: <input type="text" value="" id="article-title"></h1>
-      <h3 class="article-author">文章作者: <input type="text" value="" id="article-author"></h3>
+      <label class="article-title">文章標題: <input type="text" value="" id="article-title"></label><br/>
+      <label class="article-author">文章作者: <input type="text" value="" id="article-author"></label>
       <div class="article-context">
         文章內容:
         <article>
