feat: 避免在文章容器中重複添加 <ul>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,7 +49,12 @@
 
     <main>
       <!-- Article list -->
-      <section id="article-container">
+      <section>
+        <ul 
+          id="article-container"
+          class="list-group col-sm-12 mb-2"
+          >          
+        </ul>
         <!-- <div class="article">
           <div class="article-left">
             <div class="author">
