feat: 新增欄位說明文字

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -55,7 +55,8 @@
           文章作者: <input type="text" id="author" data-key="author" />
         </label>
         <br />
-        <select name="" class="article-cetegory">
+        <label>文章類別: </label>
+        <select name="" class="article-category">
           <option selected>請選擇文章類別</option>
           <option>類別1</option>
           <option>類別2</option>
