--- a/src/html/article.html
+++ b/src/html/article.html
@@ -36,6 +36,9 @@
         <i class="fa-solid fa-pen-to-square" style="font-size: 30px;"></i>
       </button>
 
+      <div class="profile-picture">
+          <a href="profile.html"><img src="../data/Alex.png" /></a>
+        </div>
     </nav>
   </header>
   <div class="non-fixed-header"></div>
