feat: 針對 edit 、 index 頁面，新增 個人頭像 且 點擊導向 profile 頁面

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -43,6 +43,10 @@
             </text>
           </svg>
         </div>
+
+        <div class="profile-picture">
+          <a href="profile.html"><img src="../data/Alex.png" /></a>
+        </div>
       </nav>
     </header>
 
