--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -24,7 +24,7 @@
   <body>
     <!-- Header -->
     <header>
-      <nav>
+      <nav class="nav-bar">
         <div class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
             <!-- 圓圈 -->
