fix: 修正文章分類 API

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -56,7 +56,7 @@
         </label>
         <br />
         <label>文章類別: </label>
-        <select name="" class="article-category">
+        <select data-key="category" class="article-category">
           <!--<option selected>請選擇文章類別</option>
           <option>類別1</option>
           <option>類別2</option>
