--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,6 +61,10 @@
           <!-- type="submit" 的 <button> 用於提交表單，而未指定 type 的 <button> 通常用於其他目的，例如 JavaScript 事件處理程序。 -->
           <button id="createButton" class="btn c-border m-1">Create</button>
         </div>
+
+        <div class="profile-picture">
+          <a href="profile.html"><img src="../data/Alex.png" /></a>
+        </div>
       </nav>
     </header>
 
