feat: 移除無效 navbar 監聽器

--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -56,10 +56,10 @@
         <label id="user-id"> </label>
         <br />
         <label id="user-name"
-          >User Name:<input type="text" value="123"
+          >User Name:<input type="text"
         /></label>
         <br />
-        <label id="email">Email:<input type="text" value="123" /></label>
+        <label id="email">Email:<input type="text" /></label>
         <br />
         <label id="photo">Photo <button>上傳圖片</button></label>
         <br />
