HTML新增SELECT標籤,article.js新增category.innerHTML = options

--- a/src/html/article.html
+++ b/src/html/article.html
@@ -37,8 +37,8 @@
       </button>
 
       <div class="profile-picture">
-          <a href="profile.html"><img src="../data/Alex.png" /></a>
-        </div>
+        <a href="profile.html"><img src="../data/Alex.png" /></a>
+      </div>
     </nav>
   </header>
   <div class="non-fixed-header"></div>
@@ -48,6 +48,7 @@
       <div class="article-content">
         <h1 class="article-title">文章標題:</h1>
         <h3 class="article-author">文章作者:</h3>
+        <select data-key="category" class="article-category"></select>
         <div class="article-context">
           文章內容:
           <article id="context">
