task45: 新增文章分類(由cookie抓取)

--- a/src/html/article.html
+++ b/src/html/article.html
@@ -48,7 +48,7 @@
       <div class="article-content">
         <h1 class="article-title">文章標題:</h1>
         <h3 class="article-author">文章作者:</h3>
-        <select data-key="category" class="article-category"></select>
+        <h3 class="article-category">文章作者:</h3>
         <div class="article-context">
           文章內容:
           <article id="context">
