--- a/src/html/user.html
+++ b/src/html/user.html
@@ -4,11 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='40' fill='%23c32f27'/%3E%3Ctext x='50' y='60' font-family='Arial' font-size='50' fill='%23f9c80e' text-anchor='middle' dominant-baseline='middle'%3EA%3C/text%3E%3C/svg%3E" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap"
+        rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
-    <h1>user-list</h1>
+    <!-- Header -->
+    <header>
+        <nav class="nav-bar">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                    <!-- 圓圈 -->
+                    <circle cx="50" cy="50" r="40" fill="#c32f27" />
+                    <!-- 文字 "A" -->
+                    <text x="50" y="57" font-family="Arial" font-size="50" fill="#f9c80e" text-anchor="middle"
+                        dominant-baseline="middle">
+                        A
+                    </text>
+                </svg>
+            </div>
+            <!-- UserList -->
+            <div class="list-profile-container">
+                <div class="user-list">
+                    U
+                </div>
+
+                <div class="profile-picture">
+                    <a href="profile.html"><img src="../data/Alex.png" /></a>
+                </div>
+
+            </div>
+
+        </nav>
+    </header>
+
+    <main>
+        <div style="margin: 0 auto;width: 60%;text-align: center;">search bar</div>
+
+        <div class="user-list-container">
+            <div class="user-container">
+                <div>
+                    user-data
+                </div>
+            </div>
+            <div class="user-container">
+                <div>
+                    user-data
+                </div>
+            </div>
+            <div class="user-container">
+                <div>
+                    user-data
+                </div>
+            </div>
+            <div class="user-container">
+                <div>
+                    user-data
+                </div>
+            </div>
+            <div class="user-container">
+                <div>
+                    user-data
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 
 </html>
