新增user-container-CSS、user-img、user-name

--- a/src/html/user.html
+++ b/src/html/user.html
@@ -51,9 +51,12 @@
 
         <div class="user-list-container">
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn">Follow</button>
             </div>
             <div class="user-container">
                 <div>
