新增用戶列表按鈕圖案

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,10 +34,18 @@
           </text>
         </svg>
       </div>
+
+      <div class="search-container d-flex c-flex-axis0-center">
+        <div id="search-form" class="search-bar">
+          <input id="search-input" type="text" placeholder="Search..." name="search" value="">
+          <button id="search-btn" class="btn c-border">Search</button>
+        </div>
+      </div>
+
       <!-- UserList -->
       <div class="list-profile-container">
         <div class="user-list">
-          U
+          <i class="fa-solid fa-users fa-2xl"></i>
         </div>
 
         <div class="profile-picture">
