--- a/src/html/user.html
+++ b/src/html/user.html
@@ -40,19 +40,16 @@
                     <button id="search-btn" class="btn c-border">Search</button>
                 </div>
             </div>
-
-            <!-- UserList -->
             <div class="list-profile-container">
+                <!-- UserList -->
                 <div class="user-list">
-                    <i class="fa-solid fa-users fa-2xl"></i>
+                    <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
                 </div>
-
+                <!-- Profile -->
                 <div class="profile-picture">
                     <a href="profile.html"><img src="../data/Alex.png" /></a>
                 </div>
-
             </div>
-
         </nav>
     </header>
 
@@ -69,24 +66,36 @@
                 <button class="follow-btn">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn">Follow</button>
             </div>
         </div>
     </main>
