--- a/src/html/create.html
+++ b/src/html/create.html
@@ -43,8 +43,15 @@
             </text>
           </svg>
         </div>
-        <div class="profile-picture">
-          <a href="profile.html"><img src="../data/Alex.png" /></a>
+        <div class="list-profile-container">
+            <!-- UserList -->
+            <div class="user-list">
+                <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
+            </div>
+            <!-- Profile -->
+            <div class="profile-picture">
+                <a href="profile.html"><img src="../data/Alex.png" /></a>
+            </div>
         </div>
       </nav>
     </header>
