--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,19 +41,17 @@
           <button id="search-btn" class="btn c-border">Search</button>
         </div>
       </div>
-
-      <!-- UserList -->
+      
       <div class="list-profile-container">
+        <!-- UserList -->
         <div class="user-list">
-          <i class="fa-solid fa-users fa-2xl"></i>
+          <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
         </div>
-
+        <!-- Profile -->
         <div class="profile-picture">
           <a href="profile.html"><img src="../data/Alex.png" /></a>
         </div>
-
       </div>
-
     </nav>
   </header>
 
