--- a/src/html/login.html
+++ b/src/html/login.html
@@ -54,9 +54,15 @@
         <div id="loginErrorMsg"></div>
         <form id="loginForm">
           <label>Email:</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" maxlength="25" required />
           <label>密碼:</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            maxlength="20"
+            required
+          />
           <button type="submit" id="loginSubmit">登入</button>
         </form>
         <h3 id="loginH3">尚無帳號？<a href="register.html">註冊帳號</a></h3>
