--- a/src/html/register.html
+++ b/src/html/register.html
@@ -54,13 +54,25 @@
         <div id="registerErrorMsg"></div>
         <form id="registerForm">
           <label>Name:</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="username" name="username" maxlength="50" />
           <label>Email:</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" maxlength="25" required />
           <label>密碼:</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            maxlength="20"
+            required
+          />
           <label>再次輸入密碼:</label>
-          <input type="password" id="repassword" name="repassword" required />
+          <input
+            type="password"
+            id="repassword"
+            name="repassword"
+            maxlength="20"
+            required
+          />
           <button type="submit" id="registerSubmit">創建</button>
         </form>
         <h3 id="registerH3">已有帳號？<a href="login.html">登入</a></h3>
