--- a/src/html/user.html
+++ b/src/html/user.html
@@ -66,27 +66,39 @@
                         alt="">
                 </div>
                 <div class="user-name">Henry</div>
-                <button class="follow-btn">Follow</button>
+                <button class="follow-btn" id="user1">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn" id="user2">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn" id="user3">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn" id="user4">Follow</button>
             </div>
             <div class="user-container">
-                <div>
-                    user-data
+                <div class="user-image">
+                    <img src="https://w7.pngwing.com/pngs/946/145/png-transparent-letter-h-n-h-letter-miscellaneous-text-trademark-thumbnail.png"
+                        alt="">
                 </div>
+                <div class="user-name">Henry</div>
+                <button class="follow-btn" id="user5">Follow</button>
             </div>
         </div>
     </main>
